# twitter-data-tools

./: CMakeLists.txt
data/: dictionary.txt  tweetlist.py
data-tagger/src/: CsvReader.cpp  CsvRecord.cpp  tagger.cpp
include/cppoptlib/: problem.h
include/data-tagger/: CsvReader.h  CsvRecord.h
include/neural-network/: NeuralNetwork.h  WordNeuralNetwork.h
include/representation-parser/: Configuration.h  Dictionary.h  DictionaryEntry.h  OutputGenerator.h  Tweet.h  TweetLoader.h
include/tools-lib/: Process.h  StringUtils.h
neural-network/src/: NeuralNetwork.cpp  WordNeuralNetwork.cpp
nn-parser/src/: main.cpp
representation-parser/src/: Configuration.cpp  DictionaryEntry.cpp  Dictonary.cpp  OutputGenerator.cpp  Tweet.cpp  TweetLoader.cpp  dictionary-generator.cpp
tools-lib/src/: Process.cpp  StringUtils.cpp
